--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -8,10 +8,10 @@
         "password": "docker",
         "database": "dcasa",
         "entities": [
-            "./src/modules/**/infra/typeorm/entities/*.ts"
+            "./src/modules/**/infra/typeorm/entities/*.js"
         ],
         "migrations": [
-            "./src/shared/infra/typeorm/migrations/*.ts"
+            "./src/shared/infra/typeorm/migrations/*.js"
         ],
         "cli": {
             "migrationsDir": "./src/shared/infra/typeorm/migrations"
@@ -26,7 +26,7 @@
         "database": "gobarber",
         "useUnifiedTopology": "true",
         "entities": [
-            "./src/modules/**/infra/typeorm/schemas/*.ts"
+            "./src/modules/**/infra/typeorm/schemas/*.js"
         ]
     }
 ]
